gizli overlay resmini biraz aşayığa aldım

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sessiz İşgale Dur De</title>
 </head>
@@ -20,11 +19,11 @@
     <br>
     <button style="width: 500px; height: 50px;" onclick="addOverlay()">Sessiz İşgale Dur De!</button>
 
-    <img src="overlay.png" alt="" id="overlayImage" style="position:absolute; top:-10000px;">
+    <img src="overlay.png" alt="" id="overlayImage" style="position:absolute; top: -600px;">
 </body>
 
 <script>
-    // YERLİ MİLLİ JAVASCRİPT BEN YAZDIM
+    // YERLİ MİLLİ JAVASCRİPT BEN YAZDIM 🇹🇷🇹🇷🇹🇷
     // -Deniz
     const resimInput = document.getElementById("resimInput");
     let image = document.createElement("img");
