--- a/index.html
+++ b/index.html
@@ -5,24 +5,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sessiz İşgale Dur De</title>
+    <script defer src="index.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
-<body style="margin: 10px;">
-    <h1>"Sessiz İşgale Dur De" Profil Resmi Oluşturucu</h1>
-    <h2>Resmi seçtikten sonra en alttaki butona basın. Oluşan resmi kaydetmek için resme tıklayın</h2>
-    <h3><b>Note: Pls don't ban me github</b></h3>
+<body>
+    <div class="title-container">
+        <div class="title">Sessiz İşgale Dur De!</div>
+        <div class="title-sub">Profil Resmi Oluşturucu</div>
+    </div>
 
-    <input type="file" name="Resim Seçin" id="resimInput" accept="image/*">
-    <button onclick="reader.readAsDataURL(resimInput.files[0])">Yenile</button>
-    <br><br>
-    <canvas onclick="download()" id="editCanvas" width="500px" height="500px" style="border: 1px solid; background-color: lightblue;"></canvas>
-    <img width="500px" src="overlay.png" alt="" id="overlayImage" style="position:absolute; left: 10px; z-index: -1">
-    <br>
-    <button style="width: 500px; height: 50px;" onclick="addOverlay()">Sessiz İşgale Dur De!</button>
+    <div class="main-container">
 
+        <div class="ui-container">
+            <div class="buttons">
+                <button onclick="selectImage()">Resim Yükle</button>
+            </div>
+            <div class="canvas-container">
+                <canvas width="500" height="500"></canvas>
+            </div>
+        </div>
+
+    </div>
 </body>
 
-<script>
+<!-- <script>
+    //reader.readAsDataURL(resimInput.files[0])
+
     // YERLİ MİLLİ JAVASCRİPT BEN YAZDIM 🇹🇷🇹🇷🇹🇷
     // -Deniz
     const resimInput = document.getElementById("resimInput");
@@ -50,12 +59,12 @@
         ctx.drawImage(overlayImage, 0, 0, 500, 500)
     }
 
-    function download () {
+    function download() {
         let link = document.createElement('a');
         link.download = 'taşşaklı.png';
         link.href = document.getElementById('editCanvas').toDataURL()
         link.click();
     }
-</script>
+</script> -->
 
 </html>
