--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
     <div class="main-container">
 
         <div class="ui-container">
-            <div class="buttons">
+            <div class="uploadContainer">
                 <button onclick="selectImage()">Resim Yükle</button>
             </div>
             <div class="canvas-container">
                 <canvas width="500" height="500"></canvas>
             </div>
+            <div class="downloadContainer">
+                <button onclick="downloadCanvas(editorCanvas)">Resmi İndir</button>
+            </div>
         </div>
-
     </div>
 </body>
 
